animaciones en la rama

--- a/assets/contactme.html
+++ b/assets/contactme.html
@@ -37,7 +37,7 @@
 
             <div class="formulario">
                 <label for="surname">Surname</label>
-                <input type="surname" placeholder="surname">
+                <input type="surname" placeholder="surname" class="apellido">
             </div>
 
             <div class="formulario">
