--- a/assets/experiences.html
+++ b/assets/experiences.html
@@ -32,10 +32,10 @@
 
     <div class="contenedorExper">
 
-        <div id="londres">
+        <div id="londres" class="animacion">
             <h3>London, England</h3>
             <img class="imagenLondon" src="../img/london.jpg" alt="london">
-                <p>
+                <p class="textosExp">
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus optio amet aperiam quibusdam
                     laborum modi!
                 </p>
@@ -44,10 +44,10 @@
             </div>
         </div>
 
-        <div id="madrid">
+        <div id="madrid" class="animacion">
             <h3 class="madrid" >Madrid, Spain</h3>
             <img class="imagenMadrid" src="../img/madrid.jpg" alt="madrid">
-                <p id="textoMad">
+                <p id="textoMad" class="textosExp">
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat eum, autem eius inventore doloribus nesciunt quibusdam placeat, officia vel sapiente iure! Aliquam sed exercitationem aperiam?
                 </p>
             <div>
@@ -55,10 +55,10 @@
             </div>
         </div>
 
-        <div id="malta">
+        <div id="malta" class="animacion">
             <h3>Saint Julian's, Malta</h3>
             <img class="imagenMalta" src="../img/malta.jpg" alt="malta">
-                <p>
+                <p class="textosExp">
                     Lorem ipsum dolor sit amet consectetur, adipisicing elit. Doloremque consequuntur nemo dolorem? Mollitia provident iste temporibus ratione ipsam praesentium. Ut!
                 </p>
             <div>
