--- a/assets/experiences.html
+++ b/assets/experiences.html
@@ -6,6 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../css/style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <title>Experiences</title>
 </head>
 
@@ -13,7 +15,7 @@
     <header>
         <a href="../index.html"><img class="logo" src="../img/logo-blog.png" alt="logo"></a>
         <h1><a href="../index.html">Nico Blog</a></h1>
-        <nav>
+        <!-- <nav>
             <ul>
                 <li> <a href="../index.html">Home</a></li>
                 <li> <a href="#">Experiences</a> </li>
@@ -24,15 +26,51 @@
         </nav>
         <div class="search">
             <input type="search" placeholder="search">
-        </div>
+        </div> -->
+
+        <nav id="nav" class="navbar navbar-expand-lg navbar-light">
+            <div class="container-fluid">
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="../index.html">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Experiences</a>
+                        </li>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                                data-bs-toggle="dropdown" aria-expanded="false">
+                                Tips
+                            </a>
+                            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                <li><a class="dropdown-item" href="./tips.html#tip1">Tip 1</a></li>
+                                <li><a class="dropdown-item" href="./tips.html#tip2">Tip 2</a></li>
+                                <li><a class="dropdown-item" href="./tips.html#tip3">Tip 3</a></li>
+                                <li><a class="dropdown-item" href="./tips.html#tip4">Tip 4</a></li>
+                            </ul>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="./faqs.html">FAQ's</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="./contactme.html">Contact me</a>
+                        </li>
+                    </ul>
+                    <form class="d-flex">
+                        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                        <button class="btn btn-outline-success" type="submit">Search</button>
+                    </form>
+                </div>
+            </div>
+        </nav>
     </header>
 
     <main>
         <h2>Experiences</h2>
 
-    <div class="contenedorExper">
-
-        <div id="londres" class="animacion">
+        <div class="contendorCards">
+            <!-- <div id="londres" class="animacion">
             <h3>London, England</h3>
             <img class="imagenLondon" src="../img/london.jpg" alt="london">
                 <p class="textosExp">
@@ -42,30 +80,68 @@
             <div>
                 <button>Keep reading...</button>
             </div>
-        </div>
+        </div> -->
 
-        <div id="madrid" class="animacion">
-            <h3 class="madrid" >Madrid, Spain</h3>
-            <img class="imagenMadrid" src="../img/madrid.jpg" alt="madrid">
+            <!-- CARD de BOOTSTRAP London -->
+
+
+            <div class="card animacion" style="width: 18rem; box-shadow: 4px 4px 3px rgba(0, 0, 0, 0.596);">
+                <img src="../img/london.jpg" class="card-img-top" alt="Imagen de London">
+                <div class="card-body">
+                    <h5 class="card-title">London, England</h5>
+                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
+                        card's content.</p>
+                    <a href="#" class="btn botonRojo">Keep reading</a>
+                </div>
+            </div>
+
+
+            <!-- <div id="madrid" class="animacion">
+                <h3 class="madrid">Madrid, Spain</h3>
+                <img class="imagenMadrid" src="../img/madrid.jpg" alt="madrid">
                 <p id="textoMad" class="textosExp">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat eum, autem eius inventore doloribus nesciunt quibusdam placeat, officia vel sapiente iure! Aliquam sed exercitationem aperiam?
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat eum, autem eius inventore doloribus
+                    nesciunt quibusdam placeat, officia vel sapiente iure! Aliquam sed exercitationem aperiam?
                 </p>
-            <div>
-                <button id="botonMad" >Keep reading...</button>
-            </div>
-        </div>
+                <div>
+                    <button id="botonMad">Keep reading...</button>
+                </div>
+            </div> -->
 
-        <div id="malta" class="animacion">
-            <h3>Saint Julian's, Malta</h3>
-            <img class="imagenMalta" src="../img/malta.jpg" alt="malta">
-                <p class="textosExp">
-                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Doloremque consequuntur nemo dolorem? Mollitia provident iste temporibus ratione ipsam praesentium. Ut!
-                </p>
-            <div>
-                <button>Keep reading...</button>
+
+            <div class="card animacion" style="width: 18rem; box-shadow: 4px 4px 3px rgba(0, 0, 0, 0.596);">
+                <img src="../img/madrid.jpg" class="card-img-top" alt="Imagen de Madrid">
+                <div class="card-body">
+                    <h5 class="card-title">Madrid, Spain</h5>
+                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
+                        card's content.</p>
+                    <a href="#" class="btn botonRojo">Keep reading</a>
+                </div>
             </div>
+
+            <!-- <div id="malta" class="animacion">
+                <h3>Saint Julian's, Malta</h3>
+                <img class="imagenMalta" src="../img/malta.jpg" alt="malta">
+                <p class="textosExp">
+                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Doloremque consequuntur nemo dolorem?
+                    Mollitia provident iste temporibus ratione ipsam praesentium. Ut!
+                </p>
+                <div>
+                    <button>Keep reading...</button>
+                </div>
+            </div> -->
+
+            <div class="card animacion" style="width: 18rem; box-shadow: 4px 4px 3px rgba(0, 0, 0, 0.596);">
+                <img src="../img/malta.jpg" class="card-img-top" alt="Imagen de Malta">
+                <div class="card-body">
+                    <h5 class="card-title">Sain Julian's, Malta</h5>
+                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
+                        card's content.</p>
+                    <a href="#" class="btn botonRojo">Keep reading</a>
+                </div>
+            </div>
+
         </div>
-    </div>
     </main>
 
     <footer>
@@ -80,6 +156,11 @@
         </div>
         <p class="ultTexto">Copyright, Nicolas Ravasi.</p>
     </footer>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
+    </script>
+
 </body>
 
 </html>
