--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/style.css">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <title>Home</title>
 </head>
 
@@ -15,7 +17,7 @@
     <header>
         <a href="#"><img class="logo" src="img/logo-blog.png" alt="logo"></a>
         <h1><a href="#">Nico Blog</a></h1>
-        <nav>
+        <!-- <nav>
             <ul>
                 <li><a href="#">Home</a></li>
                 <li><a href="assets/experiences.html">Experiences</a></li>
@@ -26,7 +28,48 @@
         </nav>
         <div class="search">
             <input type="search" placeholder="search" data-aos="zoom-in" >
-        </div>
+        </div> -->
+
+        <!-- Navbar de BOOTSTRAP (arriba el mio original) -->
+
+        <nav id="nav" class="navbar navbar-expand-lg navbar-light">
+            <div class="container-fluid">
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="./index.html">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href=".//assets/experiences.html">Experiences</a>
+                        </li>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                                data-bs-toggle="dropdown" aria-expanded="false">
+                                Tips
+                            </a>
+                            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                <li><a class="dropdown-item" href="./assets/tips.html#tip1">Tip 1</a></li>
+                                <li><a class="dropdown-item" href="./assets/tips.html#tip2">Tip 2</a></li>
+                                <li><a class="dropdown-item" href="./assets/tips.html#tip3">Tip 3</a></li>
+                                <li><a class="dropdown-item" href="./assets/tips.html#tip4">Tip 4</a></li>
+                            </ul>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="./assets/faqs.html">FAQ's</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="./assets/contactme.html">Contact me</a>
+                        </li>
+                    </ul>
+                    <form class="d-flex">
+                        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                        <button class="btn btn-outline-success" type="submit">Search</button>
+                    </form>
+                </div>
+            </div>
+        </nav>
+
+
     </header>
 
     <main>
@@ -85,6 +128,10 @@
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
         AOS.init();
+    </script>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
     </script>
 
 </body>
