proyecto final finalizado

--- a/assets/contactme.html
+++ b/assets/contactme.html
@@ -22,7 +22,7 @@
         <div style="display: flex; justify-content: center;">
             <a href="../index.html"><img class="logo" src="../img/logo-blog.png" alt="logo"></a>
         </div>
-        <h1>Nico Blog</h1>
+        <h1>Nico Flying Solo</h1>
 
         <nav class="navbar navbar-expand-md navbar-dark">
             <a class="navbar-brand" href="#"> </a>
