--- a/assets/faqs.html
+++ b/assets/faqs.html
@@ -22,7 +22,7 @@
         <div style="display: flex; justify-content: center;">
             <a href="../index.html"><img class="logo" src="../img/logo-blog.png" alt="logo"></a>
         </div>
-        <h1>Nico Blog</h1>
+        <h1>Nico Flying Solo</h1>
 
         <nav class="navbar navbar-expand-md navbar-dark">
             <a class="navbar-brand" href="#"> </a>
@@ -56,25 +56,68 @@
         <h2>FAQ's</h2>
         <ul>
             <li>
-                <h3>Where are you living currently?</h3>
-                <iframe
-                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3034.852471667459!2d-3.721389349261589!3d40.47852867925667!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd422993f58a34cd%3A0x5f0c9e560ac423a7!2sC.%20de%20Santiago%20de%20Compostela%2C%2092%2C%2028035%20Madrid!5e0!3m2!1ses!2ses!4v1644498900591!5m2!1ses!2ses"
-                    width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                <h3>Question 1: How many countries have you been?</h3>
+                <p class="datos">Well, maybe I am forgetting some country... but here we go!! 
+                    <br><br>
+                    1 Chile 
+                    <br>
+                    2 Brazil
+                    <br>
+                    3 Uruguay
+                    <br>
+                    4 Dominican Republic
+                    <br> 
+                    5 Costa Rica
+                    <br> 
+                    6 Spain
+                    <br>
+                    7 England
+                    <br> 
+                    8 Wales
+                    <br>
+                    9 Scotland
+                    <br> 
+                    10 North Ireland
+                    <br>
+                    11 France 
+                    <br>
+                    12 Germany 
+                    <br>
+                    13 Denmmark 
+                    <br>
+                    14 The Netherlands
+                    <br>
+                    15 Belgium 
+                    <br>
+                    16 Norway
+                    <br>
+                    17 Malta
+                    <br>
+                    18 Austria 
+                    <br>
+                    19 Slovakia 
+                    <br>
+                    20 Italy 
+                </p>
+                <br><br><br><br>
             </li>
 
             <li>
-                <h3>Question 2</h3>
-                <p class="datos">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Commodi explicabo beatae molestiae reiciendis fugit, aspernatur illo eligendi voluptatem amet laboriosam, nihil eius numquam obcaecati tenetur in doloribus id. Praesentium, dolorem laborum! Excepturi maxime voluptates, odio ex eveniet ipsum maiores dolore.</p>
+                <h3>Question 2: Why are you living in Madrid?</h3>
+                <p class="datos">Okey, such an interesting question... even that I do not know the answer.
+                    <br>
+                    But if I have to answer I would say it was the first city that came to my mind when I decided to migrate abroad... Is the capital of Spain, here we talk the same language than Argentina and I thought it was going to be easir to adaptate in a kind of similar country. 
+                </p>
+                <br><br><br><br>
             </li>
 
             <li>
-                <h3>Question 3</h3>
-                <p class="datos">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ratione, ullam asperiores deleniti aperiam sunt ipsa doloribus facere dolore, minima magni veniam omnis rem sequi ipsum magnam iure, aut qui quo nesciunt facilis iusto. Ab nulla, perspiciatis assumenda, architecto totam modi accusamus, sunt corrupti sit labore ut. Veritatis dolorem sed saepe.</p>
-            </li>
-
-            <li>
-                <h3>Question 4</h3>
-                <p class="datos">Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit non assumenda delectus optio. Enim non iusto, ipsum et, nesciunt in harum quia, rerum tenetur asperiores qui aliquid eligendi numquam ea fugiat. Sequi illo cupiditate asperiores.</p>
+                <h3>Question 3: What do yo do for living?</h3>
+                <p class="datos">Actually I work in a Hospital in the north of Madrid. 
+                    <br>
+                    I work as a "celador", being the person who transport the patient between the point A to the point B, mobilzing and taking care of them.
+                </p>
+                <br><br><br><br>
             </li>
         </ul>
     </main>
