--- a/assets/tips.html
+++ b/assets/tips.html
@@ -22,7 +22,7 @@
         <div style="display: flex; justify-content: center;">
             <a href="../index.html"><img class="logo" src="../img/logo-blog.png" alt="logo"></a>
         </div>
-        <h1>Nico Blog</h1>
+        <h1>Nico Flying Solo</h1>
 
         <nav class="navbar navbar-expand-md navbar-dark">
             <a class="navbar-brand" href="#"> </a>
@@ -56,58 +56,121 @@
         <h2>Tips</h2>
 
         <div>
-            <h3 id="tip1">Tip 1</h3>
-            <p class="textoTip">Lorem ipsum dolor sit amet consectetur adipisicing elit. Est reprehenderit cupiditate
-                necessitatibus odit iure, voluptate ducimus vitae quo voluptas fugiat dolor eaque, temporibus ipsum
-                error blanditiis fugit aut libero laboriosam accusantium nostrum repudiandae aspernatur eum saepe! Neque
-                numquam, possimus cupiditate asperiores rem libero placeat maiores nam ad dolores alias dolorum.
-                Possimus earum dolores nesciunt excepturi perspiciatis! Asperiores enim est maiores, culpa,
-                exercitationem accusamus vel doloremque, minus odit ex praesentium ea quibusdam ipsa error nostrum unde
-                eius corporis numquam? Ullam nesciunt molestias voluptatum inventore dignissimos voluptates. Saepe
-                laborum at molestiae quaerat beatae ab nesciunt ducimus dolorum placeat incidunt iste vel, voluptatem
-                numquam earum libero hic reiciendis voluptatibus eligendi temporibus rem modi? Sed temporibus sit ab
-                voluptatibus ullam fuga veniam porro, facilis ad totam alias quis fugit labore voluptatem debitis facere
-                fugiat possimus asperiores iure ipsam magni excepturi? Libero tempora suscipit voluptatem ex praesentium
-                illo fugiat, modi doloribus, minima asperiores at similique itaque nobis amet molestias laborum
-                obcaecati omnis? Nobis quas tenetur deserunt aut sunt! Harum repudiandae veritatis esse mollitia
-                reprehenderit numquam vitae deleniti iusto qui voluptatum, praesentium consequatur, vel culpa eum
-                voluptatibus non molestiae sit nobis? Nulla vero quas eaque aliquam ipsum assumenda, corporis sit illo
-                officia nesciunt, placeat temporibus tenetur vitae tempore iusto, ex quos? Ipsum adipisci accusamus
-                distinctio, quas inventore cupiditate, incidunt autem enim veniam delectus earum, eos ut consequuntur
-                quod esse repellendus vel praesentium sapiente obcaecati? Minima eaque corporis, possimus et id, odio
-                cum nisi nihil similique doloremque quo repellendus velit ad incidunt illum labore aut sint veritatis
-                officia sed. Veniam facere similique quae quo excepturi dolore pariatur perferendis error tempore,
-                praesentium minus, tenetur fugiat maxime eius aliquid, molestiae dolores. Deserunt sint magni nihil
-                doloribus ducimus id voluptatum aliquid exercitationem suscipit, blanditiis praesentium, accusamus enim
-                vel a fugit? Fuga deleniti perspiciatis neque aperiam minus asperiores quae natus eligendi.</p>
-            <br><br><br><br><br><br><br><br><br><br>
+            <h3 id="tip1">Tip 1: 12 Random things you should pack for long term travel</h3>
+            <p class="textoTip">When it comes to packing for a trip, there are a million and one checklists out there,
+                from weather to the type of destinations each one varies. But, when you are heading off on a long-term
+                adventure or backpacking, you might need some different gear than your typical holiday.
+                <br>
+                So, if you plan to take an extended break soon, especially as a digital nomad, these could well be
+                essentials for your trip.
+                <br><br>
+                Multi-outlet extension cable
+                <br>
+                Head Torch
+                <br>
+                Waiters friend
+                <br>
+                Water / Coffee bottle
+                <br>
+                Extra large zip-lock bag
+                <br>
+                Bio-degradable laundry soap bar
+                <br>
+                Feet odour eliminators
+                <br>
+                Instant camera
+                <br>
+                Indoor flip-flops
+                <br>
+                Car power plug adaptor
+                <br>
+                Solar USB charger pack
+                <br>
+                Extra phone charging cable
+            </p>
+            <br><br><br><br>
         </div>
 
         <div>
-            <h3 id="tip2">Tip 2</h3>
-            <p class="textoTip">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis tempora neque ullam,
-                recusandae in illum corporis ipsum placeat quo porro modi nesciunt vero a nemo officiis fugit saepe
-                inventore veniam.</p>
-            <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+            <h3 id="tip2">Tip 2: 20 tips and hacks for cheap flights</h3>
+            <p class="textoTip">Cheap flights, we all want them right? Let me tell you a secret, the biggest bullshit in
+                the travel world is "You can fly for free" or travel for nada, even all the credit card hacks in the
+                world require you to have some money in the bank to spend.
+                <br>
+                So if you want cheap flights without the hassle of travel hacks, follow my lead.
+                <br><br>
+                1 Be flexible (or lucky)
+                <br>
+                2 Go anywhere
+                <br>
+                3 Go anytime
+                <br>
+                4 Be secret
+                <br>
+                5 Enjoy a bonus mini-break
+                <br>
+                6 Take a detour
+                <br>
+                7 Sign up for deals on Cheap Flights
+                <br>
+                8 Be an undercover country cheap flight ninja
+                <br>
+                9 Book direct…
+                <br>
+                10 …But do not ignore the agents
+                <br>
+                11 Be your own search engine
+                <br>
+                12 Pick when to book
+                <br>
+                13 Get on Rome 2 Rio
+                <br>
+                14 Book in advance
+                <br>
+                15 Weekday or Weekend?
+                <br>
+                16 Travel light, do not eat, squeeze in and quit your complaining
+                <br>
+                17 Get a points credit card
+                <br>
+                18 Look for stopover deals
+                <br>
+                19 Check for charter airlines
+                <br>
+                20 Check the safety rating
+            </p>
+            <br><br><br><br>
         </div>
 
         <div>
-            <h3 id="tip3">Tip 3</h3>
-            <p class="textoTip">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dignissimos ipsam, minima
-                mollitia eveniet reprehenderit, aperiam assumenda perspiciatis reiciendis quia ea hic, quod nisi? Unde
-                minus harum iusto, architecto exercitationem nisi adipisci. Eveniet impedit asperiores enim.</p>
-            <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-        </div>
-
-        <div>
-            <h3 id="tip4">Tip 4</h3>
-            <p class="textoTip">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deserunt dolore neque
-                consequatur? Aliquid nesciunt dolor temporibus perferendis, quas nisi aliquam sunt illo ipsa iste
-                excepturi nobis architecto veniam nam velit non vitae veritatis dolorum natus impedit? Tempore fugit cum
-                sit quisquam harum saepe eligendi ullam sequi temporibus, magnam cumque nemo obcaecati possimus
-                accusamus, dolor sint, maiores ipsa. Architecto provident magni nostrum, excepturi facilis quidem velit
-                facere, nemo odit ducimus repellat molestias dolorum suscipit. Incidunt nihil nobis fuga eligendi omnis?
-                Minus!</p>
+            <h3 id="tip3">Tip 3: 9 Easy yet impactful ways to support locals when you travel </h3>
+            <p class="textoTip">One of the most important lessons I have learned in my eight years of traveling, is to
+                find impactful ways to support locals when you travel!
+                <br>
+                You may not realize it, but most of the time when you book a generic hotel, or buy a souvenir, the money
+                does not go to the locals! Usually it is a foreign company and most typical souvenirs come from China! It
+                may take a little extra effort to find them, but here are some easy ways you can support the locals
+                instead!
+                <br><br>
+                1 Stay at BnB’s, Homestays or Guesthouses
+                <br>
+                2 Eat at locally owned restaurants
+                <br>
+                3 Buy local handicrafts and art
+                <br>
+                4 Shop at local farmer’s markets and grocers
+                <br>
+                5 Participate in a local experience
+                <br>
+                6 Donate clothes
+                <br>
+                7 Volunteer or clean up!
+                <br>
+                8 Talk to the locals!
+                <br>
+                9 Spread the word about them and their country!
+            </p>
+            <br><br><br><br>
         </div>
     </main>
 
