--- a/assets/experiences.html
+++ b/assets/experiences.html
@@ -22,7 +22,7 @@
         <div style="display: flex; justify-content: center;">
             <a href="../index.html"><img class="logo" src="../img/logo-blog.png" alt="logo"></a>
         </div>
-        <h1>Nico Blog</h1>
+        <h1>Nico Flying Solo</h1>
 
         <nav class="navbar navbar-expand-md navbar-dark">
             <a class="navbar-brand" href="#"> </a>
@@ -67,9 +67,9 @@
                         <img src="../img/london.jpg" class="card-img-top" alt="Imagen de London">
                         <div class="card-body">
                             <h3 class="card-title">London, England</h3>
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
-                                of the
-                                card's content.</p>
+                            <p class="card-text">London, the place where (at least) my dreams came true. 
+                                Hope you enjoy this place as I have done it.
+                            </p>
                             <a href="#" class="btn botonRojo">Keep reading</a>
                         </div>
                     </div>
@@ -80,9 +80,7 @@
                         <img src="../img/madrid.jpg" class="card-img-top" alt="Imagen de Madrid">
                         <div class="card-body">
                             <h3 class="card-title">Madrid, Spain</h3>
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
-                                of the
-                                card's content.</p>
+                            <p class="card-text">Madrid, the city where i live now, my most favourite capital in the world... that place that you can not miss.</p>
                             <a href="#" class="btn botonRojo">Keep reading</a>
                         </div>
                     </div>
@@ -93,9 +91,7 @@
                         <img src="../img/malta.jpg" class="card-img-top" alt="Imagen de Malta">
                         <div class="card-body">
                             <h3 class="card-title">Saint Julian's, Malta</h3>
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
-                                of the
-                                card's content.</p>
+                            <p class="card-text">What can i say about Malta... The Island where i have lived 3 unforgottable months when i was 18.</p>
                             <a href="#" class="btn botonRojo">Keep reading</a>
                         </div>
                     </div>
