--- a/index.html
+++ b/index.html
@@ -5,25 +5,25 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Just a guy who like to travel around and want to share his experiences">
-    <meta name="keywords" content="Trips, Experiences, Young">
-    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <meta name="description" content="Just a guy who like to travel around and want to share his experiences" />
+    <meta name="keywords" content="Trips, Experiences, Young" />
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css"
         integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous" />
     <link rel="stylesheet" href="./css/bootstrap.min.css" />
-    <link rel="stylesheet" href="css/style.css">
-    <title>Nico Blog</title>
+    <link rel="stylesheet" href="css/style.css" />
+    <title>Nico Flying Solo</title>
 </head>
 
 <body>
     <!-- header igual en todos los index - cambiar los links -->
     <header>
-        <div style="display: flex; justify-content: center;">
-            <a href="#"><img class="logo" src="img/logo-blog.png" alt="logo"></a>
+        <div style="display: flex; justify-content: center">
+            <a href="#"><img class="logo" src="img/logo-blog.png" alt="logo" /></a>
         </div>
-        <h1>Nico Blog</h1>
+        <h1>Nico Flying Solo</h1>
 
         <!-- Nuevo NAVBAR + menu de hamburguesa -->
 
@@ -53,7 +53,6 @@
                 </ul>
             </div>
         </nav>
-
     </header>
 
     <main>
@@ -61,31 +60,31 @@
             <div class="seccionUno">
                 <h2>Travel Blog</h2>
                 <p class="textoUno">
-                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequatur,
-                    voluptates! Nobis laudantium excepturi et consequuntur. Dicta quo iusto
-                    delectus corrupti, illo ea ipsam impedit excepturi nobis cupiditate.
-                    Enim ea harum numquam, alias illum officiis ipsa fugit aliquid
-                    necessitatibus consectetur laboriosam corporis libero quae delectus?
-                    Quaerat cum odit numquam esse enim, sint est! Corrupti facere rem
-                    provident nobis optio error, enim eum aspernatur possimus impedit
-                    expedita, magni iusto qui labore maxime consequuntur nisi. Voluptate
-                    temporibus quo dolores, nesciunt, similique ratione mollitia officiis
-                    natus molestias sit suscipit iusto qui necessitatibus quisquam
-                    asperiores minus nisi incidunt fuga animi laborum earum dolore,
-                    architecto beatae!
+                    Hi everyone !!
+                    <br />
+                    I am Nicolas Ravasi. I am 24 years old, and I am from Ushuaia,
+                    Argentina; but living in Madrid, Spain for about 2 years and a half.
+                    <br />
+                    I have started this blog as a way to let you all know how my journey
+                    is, traveling abroad, some anecdotes and much more!!
+                    <br />
+                    This space is not going to be a place where I am going to tell you
+                    how to do this, or that is bad and this is good, and those kind of
+                    things, therefore is going to be MY PLACE where I can share (with me
+                    and all of you) all of my experiences through these years.
+                    <br />
+                    Hope you like it and enjoy as I do.
                 </p>
             </div>
 
-
             <div class="seccionDos">
-                <img class="imgGato" src="img/gato.jpg" alt="">
+                <img class="imgGato" src="img/yo.JPG" alt="" />
                 <p class="textoDos">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos, laudantium
-                    labore reprehenderit nesciunt voluptatum porro dolorum libero eaque sunt
-                    quas debitis repellat dolor deleniti quam saepe aut nemo quia corporis
-                    illo harum ipsum adipisci id accusamus totam! Incidunt, totam? Porro
-                    rerum eius et, distinctio eveniet tempora impedit perferendis quibusdam
-                    quaerat?
+                    In this space I am going to tell you some little things about me.
+                    <br>
+                    Things like what do I like, where I have been, which places do I
+                    know , and much more stuff!!! Keep reading below to know me more and
+                    have fun out there!
                 </p>
                 <div class="botonUno" data-aos="fade-up">
                     <button id="botonUno">Explore more</button>
@@ -97,7 +96,7 @@
     <!-- footer igual en todos los index - cambiar los links -->
     <footer>
         <p class="textoTres">Suscribe and recive exclusive information</p>
-        <input class="email" type="email" placeholder="email">
+        <input class="email" type="email" placeholder="email" />
         <button id="send">Send</button>
         <!-- br es para dar espacio solo se usa en parrafos/textos -->
         <div class="redesSociales">
@@ -127,7 +126,6 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.min.js"
         integrity="sha384-VHvPCCyXqtD5DqJeNxl2dtTyhF78xXNXdkwX1CZeRusQfRKp+tA7hAShOK/B/fQ2" crossorigin="anonymous">
     </script>
-
 </body>
 
 </html>
